# example-arbiter-minio

./: CMakeLists.txt  README.md  arbiter.json  conanfile.py  pipeline.json  run.sh
src/: BuildInfo.hpp.in  CMakeLists.txt  arbiter.cpp  arbiter.hpp  arbiter_example.cpp  arbiter_example.hpp  arbiter_reader.cpp  arbiter_reader.hpp  arbiter_util.hpp  arbiter_writer.cpp  arbiter_writer.hpp
test/: CMakeLists.txt  arbiter_exampleUnitTest.cpp
